# django-study

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: __init__.py
src/core/: settings.py  urls.py
src/core/base/: __init__.py  base_getter.py  base_handler.py  base_service.py  interface.py
src/core/constants/: __init__.py  http.py
src/core/dataclasses/: __init__.py  user.py
src/core/domain/: __init__.py
src/core/exceptions/: __init__.py
src/core/managers/: __init__.py  base_cache_manager.py  base_manager.py  base_queryset.py  base_time_manager.py
src/core/migrations/: __init__.py
src/core/models/: __init__.py  base_cache_model.py  base_time_model.py  soft_delete_model.py
src/core/serializers/: __init__.py  base_serializer.py
src/core/services/: __init__.py
src/core/utils/: __init__.py  function.py
src/order/: router.py  settings.py  urls.py
src/order/constants/: __init__.py  order.py  shipping_provider.py
src/order/converter/: __init__.py  order_to_order_data_converter.py
src/order/dataclasses/: shop.py
src/order/domain/: __init__.py  getter.py  handler.py
src/order/intergrations/: __init__.py
src/order/management/: __init__.py
src/order/managers/: __init__.py  order_details.py  orders.py  products.py
src/order/migrations/: 0001_initial.py
src/order/models/: __init__.py  order.py  order_detail.py  order_details.py  orders.py  product.py  products.py
src/order/serializers/: __init__.py  order_serializer.py  orders.py
src/order/services/: order_service.py  orders.py
src/order/views/: order.py  (+2 more)
src/tests/: __init__.py
(+65 files in other folders)
