[tool.poetry]
name = "django-study"
version = "0.1.0"
description = ""
authors = ["tuan.ngo <tuan.ngo@paradox.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python                  = "3.11.7"
django                  = "5.1.5"
django-bulk-update      = "2.2.0"
django-cities-light     = "3.10.1"
django-dirtyfields      = "1.9.2"
django-environ          = "0.10.0"
django-hashid-field     = "3.4.0"
django-health-check     = "3.18.1"
django-oauth-toolkit    = "2.3.0"
django-q                = {version = "1.3.9", extras = ["sentry"]}
django-redis            = "5.2.0"
djangorestframework     = "3.14.0"
djangorestframework-xml = "2.0.0"
django-mysql                    = "4.12.0"
django-split-settings           = "1.3.0"
django-stubs                    = "4.2.7"
djangorestframework-dataclasses = "1.3.1"

boto3                           = "1.34.60"
botocore                        = "1.34.60"
cached-property                 = "1.5.2"
celery                          = "5.3.6"
elasticsearch                   = "7.7.1"
elasticsearch-dsl               = "7.4.1"
mysqlclient                     = "2.2.4"
smart-open                      = "7.0.1"
xlsxwriter                      = "3.2.0"
xmltodict                       = "0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
